Fix alignment issues

--- a/css/global.css
+++ b/css/global.css
@@ -272,7 +272,6 @@ stibarc-icon {
 .leftalign {
 	display: flex;
 	justify-content: left;
-	align-items: flex-start;
 	align-content: flex-start;
 	flex-grow: 1;
 	flex-basis: 0;
